2012-07-16  Eugene Klyuchnikov  <eustas.big@gmail.com>

        Web Inspector: Implement message loop instrumentation for timeline
        https://bugs.webkit.org/show_bug.cgi?id=88325

        Reviewed by Pavel Feldman.

        Message loop instrumentation will show when the render thread is busy.

        * inspector/front-end/Settings.js:
        (WebInspector.ExperimentsSettings):
        Added new experiment.
        * inspector/front-end/TimelineGrid.js:
        (WebInspector.TimelineGrid.prototype.get dividersLabelBarElement):
        Exposed label bar element.
        * inspector/front-end/TimelinePanel.js:
        (WebInspector.TimelinePanel):
        (WebInspector.TimelinePanel.prototype._resetPanel):
        Cleanups recorded tasks.
        (WebInspector.TimelinePanel.prototype._refresh):
        Updates CPU bar.
        (WebInspector.TimelinePanel.prototype._refreshRecords):
        Ditto.
        (WebInspector.TimelinePanel.prototype._refreshCpuBars.compareEndTime):
        Ditto.
        (WebInspector.TimelinePanel.prototype._refreshCpuBars):
        Ditto.
        (WebInspector.TimelinePanel.prototype._enableMainThreadMonitoringExperiment):
        Adds CPU bar to UI.
        (WebInspector.TimelinePanel.prototype._showPopover):
        Fix NPE.
        (WebInspector.TimelineCalculator.prototype.computeTime):
        Utility for position to time conversion.
        (WebInspector.TimelineCalculator.prototype.setDisplayWindow):
        Remenbers clientWidth.
        * inspector/front-end/TimelinePresentationModel.js:
        (WebInspector.TimelinePresentationModel.categories):
        Define CPU bar colors.
        * inspector/front-end/timelinePanel.css:
        (.timeline-cpu-bars):
        CPU bar styles.
        (.timeline-cpu-bars-label):
        Ditto.

2012-07-16  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r122681.
        http://trac.webkit.org/changeset/122681