@@ -67,6 +67,10 @@ Libraries_libWebKit2APITestCore_la_SOURCES = \
 	Source/WebKit2/UIProcess/API/gtk/tests/WebViewTest.h
 Libraries_libWebKit2APITestCore_la_CPPFLAGS = $(webkit2_tests_cppflags)
 
+EXTRA_DIST += \
+	Source/WebKit2/UIProcess/API/gtk/tests/resources/test-cert.pem \
+	Source/WebKit2/UIProcess/API/gtk/tests/resources/test-key.pem
+
 Programs_WebKit2APITests_TestWebKitWebContext_SOURCES = \
 	Source/WebKit2/UIProcess/API/gtk/tests/TestWebKitWebContext.cpp
 Programs_WebKit2APITests_TestWebKitWebContext_CPPFLAGS = \
